# svue-api

./: Cargo.toml  readme.md
src/: api.rs  crypto.rs  main.rs
src/api/: documents.rs  gradebook.rs  school_info.rs  student_info.rs
