[package]
name = "axum-svue"
version = "1.0.0"
edition = "2021"

[dependencies]
aes = "0.8.4"
cbc = "0.1.2"
time = { version = "0.3.41", features = [
  "formatting",
  "parsing",
  "macros",
  "wasm-bindgen",
] }
reqwest = { version = "0.12.22", default-features = false, features = [
  "rustls-tls",
] }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }
axum = { version = "0.8.4", features = ["macros"] }
axum-extra = { version = "0.10.1", default-features = false, features = [
  "typed-header",
] }
tower-service = "0.3.3"
tower-http = { version = "0.6.6", features = [
  "cors",
  "compression-br",
  "compression-gzip",
] }
quick-xml = { version = "0.38.0", features = ["serde", "serialize"] }
rand = "0.9.1"
aes-gcm-siv = { version = "0.11.1", features = ["std"] }
base64 = "0.22.1"
crypto-common = { version = "0.1.6", features = ["std"] }
serde_derive = "1.0.219"
argon2 = "0.5.3"
base58 = "0.2.0"
mimalloc = "0.1.47"
lazy_static = "1.5.0"
async_zip = { version = "0.0.17", features = ["deflate", "tokio"] }
serde_json = "1.0.140"
serde_bytes = "0.11.15"
futures = "0.3.31"

[features]
default = []
all = ["access", "attendance", "debug", "schedule", "cache", "enhanced"]
access = []
attendance = []
debug = []
schedule = []
cache = []
enhanced = []
